# bulkhead

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  pyproject.toml  skills-lock.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: agentbreak.md
.github/workflows/: ci.yml  deploy-pages.yml  publish-pypi.yml
.mcpjam/skills/: agentbreak-run-tests
.trae/skills/: agentbreak-create-tests
agentbreak/: __main__.py  config.py  history.py  main.py  mcp_protocol.py  mcp_proxy.py  mcp_server.py  mcp_transport.py  runner.py  scenarios.py
agentbreak/config/: loader.py  models.py
agentbreak/core/: fault_injection.py  proxy.py  statistics.py
agentbreak/discovery/: mcp.py
agentbreak/protocols/: __init__.py  mcp.py
agentbreak/services/: __init__.py  base.py  mcp.py  openai.py
agentbreak/transports/: sse.py
bulkhead/: main.py
docs/: README.md  SCENARIOS.md  TESTING_METHODOLOGY.md  index.html  mcp-migration-guide.md  mcp-proxy-architecture.md
docs-site/: mkdocs.yml
docs-site/docs/: index.md
docs-site/docs/getting-started/: claude-code.md  plugin.md
docs-site/docs/reference/: cli.md  scenarios.md
docs/plans/: mcp-proxy-layer.md  refactor-plan.md
docs/plans/completed/: mcp-proxy-layer.md  refactor-plan.md
examples/: README.md  mcp-proxy.yaml  multi-service.yaml  openai-proxy.yaml
examples/deepagents/: README.md  main.py  requirements.txt
examples/live_harness/: run_live_e2e.py
examples/simple_langchain/: README.md  main.py  requirements.txt
examples/simple_mcp_server/: README.md  main.py
examples/simple_react_agent/: README.md  graph.py  langgraph.json  requirements.txt  tools.py
plugins/agentbreak/.claude-plugin/: plugin.json
plugins/agentbreak/commands/: agentbreak.md  create-tests.md  init.md  run-tests.md
plugins/agentbreak/skills/agentbreak/: SKILL.md
plugins/agentbreak/skills/agentbreak-create-tests/: SKILL.md
plugins/agentbreak/skills/agentbreak-init/: SKILL.md
plugins/agentbreak/skills/agentbreak-run-tests/: SKILL.md
skills/: agentbreak-create-tests  agentbreak-run-tests
skills/agentbreak/: SKILL.md
skills/agentbreak-create-tests/: SKILL.md
skills/agentbreak-run-tests/: SKILL.md
skills/agentbreak-testing/: SKILL.md
skills/bulkhead-testing/: SKILL.md
tests/: test_anthropic_llm.py  test_behaviors.py  test_comprehensive.py  test_config_auth.py  test_core_components.py  test_main.py  test_mcp_integration.py  test_mcp_performance.py  test_mcp_protocol.py  test_mcp_proxy.py  test_mcp_transport.py  test_multi_service.py  test_scenarios.py  test_services.py  test_streaming.py
