[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bulkhead"
version = "0.1.0"
description = "Minimal chaos proxy for OpenAI-compatible LLM apps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
bulkhead = "bulkhead.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["bulkhead"]

[tool.pytest.ini_options]
testpaths = ["tests"]
