[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbreak"
version = "0.1.0"
description = "Minimal chaos proxy for OpenAI-compatible LLM apps."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "openai", "proxy", "chaos-testing", "resilience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/mnvsk97/agentbreak"
Repository = "https://github.com/mnvsk97/agentbreak"
Issues = "https://github.com/mnvsk97/agentbreak/issues"

[project.scripts]
agentbreak = "agentbreak.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["agentbreak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
